--- a/.github/workflows/fe-build.yml
+++ b/.github/workflows/fe-build.yml
@@ -2,6 +2,9 @@ name: Frontend Build Workflow
 
 on:
   workflow_call:
+    secrets:
+      DOT_NPMRC:
+        required: true
     inputs:
       GHA_REF:
         type: string
@@ -40,7 +43,13 @@ jobs:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
-      - name: npm ci
+      - name: Use .npmrc
+        uses: bduff9/use-npmrc@v1.1
+        with:
+          dot-npmrc: ${{ secrets.DOT_NPMRC }}
+
+      - name: Install modules
+        if: steps.npm-cache.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Fetch base branch
