--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -3,6 +3,8 @@ name: Frontend E2E Workflow
 on:
   workflow_call:
     secrets:
+      DOT_NPMRC:
+        required: true
       PERCY_TOKEN:
         required: false
     inputs:
@@ -38,6 +40,15 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
+
+      - name: Use .npmrc
+        uses: bduff9/use-npmrc@v1.1
+        with:
+          dot-npmrc: ${{ secrets.DOT_NPMRC }}
+
+      - name: Install modules
+        if: steps.npm-cache.outputs.cache-hit != 'true'
+        run: npm ci
 
       - name: Install Cypress Binary
         run: npx cypress install
