--- a/.github/workflows/fe-snapshot.yml
+++ b/.github/workflows/fe-snapshot.yml
@@ -17,7 +17,7 @@ on:
       JFROG_USER:
         required: true
       GIT_USER_TOKEN:
-        required: true
+        required: false
 
 jobs:
   snapshot:
@@ -27,7 +27,6 @@ jobs:
         with:
           ref: ${{ inputs.GHA_REF }}
           fetch-depth: 0
-          token: ${{ secrets.GIT_USER_TOKEN }}
       - uses: actions/setup-node@v3
         with:
           node-version: 22.15.0
