--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -143,7 +143,7 @@ jobs:
       - name: download coverage report
         uses: actions/download-artifact@v5
         with:
-          path: coverage/
+          path: ./
           pattern: coverage-*
           merge-multiple: true
 
