--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         target: [ 'test' ]
         jobIndex: [ 1, 2, 3,4 ]
-      fail-fast: false # Ensure all jobs run even if one fails
+      fail-fast: false # Continue running all matrix combinations even if one fails
     env:
       jobCount: 4
     steps:
