--- a/.github/workflows/fe-snapshot.yml
+++ b/.github/workflows/fe-snapshot.yml
@@ -9,6 +9,10 @@ on:
       GHA_BASE:
         type: string
         required: true
+      BACKEND_REPO:
+        type: string
+        required: false
+        description: 'Backend repository name to trigger (e.g., "main" or "cplace-paw")'
     secrets:
       JFROG_BASE64_TOKEN:
         required: true
@@ -17,6 +21,8 @@ on:
       JFROG_USER:
         required: true
       GIT_USER_TOKEN:
+        required: false
+      CROSS_REPO_PAT:
         required: false
 
 jobs:
@@ -45,3 +51,16 @@ jobs:
           JFROG_USER: ${{ secrets.JFROG_USER }}
           BASE: ${{ inputs.GHA_BASE }}
           SNAPSHOT: true
+
+      - name: Trigger Backend Package Update
+        if: inputs.BACKEND_REPO != ''
+        uses: peter-evans/repository-dispatch@v3
+        with:
+          token: ${{ secrets.CROSS_REPO_PAT }}
+          repository: collaborationFactory/${{ inputs.BACKEND_REPO }}
+          event-type: frontend-packages-published
+          client-payload: |
+            {
+              "branch": "${{ github.ref_name }}",
+              "actor": "${{ github.actor }}"
+            }
