--- a/.github/workflows/be-package-update.yml
+++ b/.github/workflows/be-package-update.yml
@@ -22,7 +22,7 @@ jobs:
           git config --global user.email "actions@github.com"
 
       - name: Update packages
-        uses: collaborationFactory/github-actions/.github/actions/backend-package-updater@master
+        uses: collaborationFactory/github-actions/.github/actions/backend-package-updater@feature/automate-frontend-pkg-integration
         with:
           branch: ${{ github.event.client_payload.branch }}
           actor: ${{ github.event.client_payload.actor }}
