--- a/.github/actions/backend-package-updater/action.yml
+++ b/.github/actions/backend-package-updater/action.yml
@@ -26,7 +26,7 @@ runs:
       env:
         BRANCH: ${{ inputs.branch }}
         ACTOR: ${{ inputs.actor }}
-      run: npx ts-node "$GITHUB_ACTION_PATH/../../../tools/scripts/backend-package-updater/main.ts
+      run: npx ts-node "$GITHUB_ACTION_PATH/../../../tools/scripts/backend-package-updater/main.ts"
 
     - name: Check for changes
       id: check-changes
