--- a/.github/actions/backend-package-updater/action.yml
+++ b/.github/actions/backend-package-updater/action.yml
@@ -20,19 +20,12 @@ outputs:
 runs:
   using: 'composite'
   steps:
-    - name: Configure .npmrc for github-actions repo dependencies
-      shell: bash
-      run: |
-        cd "$GITHUB_ACTION_PATH/../../.."
-        echo "${{ inputs.dot-npmrc }}" > .npmrc
-        echo "✓ .npmrc configured in github-actions repo"
-
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: 22.15.0
 
-    - name: Install github-actions dependencies
+    - name: Install github-actions dependencies (without custom .npmrc)
       shell: bash
       run: |
         cd "$GITHUB_ACTION_PATH/../../.."
