--- a/.github/workflows/fe-check-upmerge.yml
+++ b/.github/workflows/fe-check-upmerge.yml
@@ -32,7 +32,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: check if upmerge is necessary and post to slack
-        uses: collaborationFactory/github-actions/.github/actions/upmerge@release/26.1
+        uses: collaborationFactory/github-actions/.github/actions/upmerge@master
         env:
           SLACK_TOKEN_UPMERGE: ${{ secrets.SLACK_TOKEN_UPMERGE }}
           GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
