--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Unit Tests
         id: test
-        uses: collaborationFactory/github-actions/.github/actions/run-many@release/26.1
+        uses: collaborationFactory/github-actions/.github/actions/run-many@master
         continue-on-error: true
         with:
           target: ${{ matrix.target }}
