PFM-TASK-7221 - Restrict GitHub Actions workflow permissions
Replace overly permissive 'write-all' with specific permissions
(contents, pull-requests, actions, checks) to follow security best
practices and improve security rating.

Affected files:
- .github/workflow-templates/fe/fe-check-upmerge.yml
- .github/workflow-templates/fe/fe-cleanup-snapshots.yml
- .github/workflow-templates/fe/fe-licenses.yml
- .github/workflow-templates/fe/fe-main.yml
- .github/workflow-templates/fe/fe-pr-close.yml
- .github/workflow-templates/fe/fe-pr-snapshot.yml
- .github/workflow-templates/fe/fe-pr.yml
- .github/workflow-templates/fe/fe-release.yml
- .github/workflow-templates/fe/fe-tag-pushed.yml

--- a/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
+++ b/.github/workflow-templates/fe/fe-cleanup-snapshots.yml
@@ -4,7 +4,11 @@ on:
     # Runs "At 00:00 on day-of-month 28 in every 3rd month." (see https://crontab.guru)
     - cron: '0 0 28 */3 *'
 
-permissions: write-all
+permissions:
+  contents: write
+  pull-requests: write
+  actions: read
+  checks: write
 
 jobs:
   cleanup-snapshots:
