--- a/.github/workflow-templates/fe/fe-check-upmerge.yml
+++ b/.github/workflow-templates/fe/fe-check-upmerge.yml
@@ -4,7 +4,11 @@ on:
     # Runs "At 18:00 every day" (see https://crontab.guru)
     - cron: '0 18 * * *'
 
-permissions: write-all
+permissions:
+  contents: write
+  pull-requests: write
+  actions: read
+  checks: write
 
 jobs:
   check-upmerge:
