--- a/.github/workflow-templates/fe/fe-licenses.yml
+++ b/.github/workflow-templates/fe/fe-licenses.yml
@@ -5,7 +5,11 @@ on:
       - 'package.json'
       - 'package-lock.json'
 
-permissions: write-all
+permissions:
+  contents: write
+  pull-requests: write
+  actions: read
+  checks: write
 
 env:
   NX_BRANCH: ${{ github.event.number }}
