--- a/.github/workflow-templates/fe/fe-main.yml
+++ b/.github/workflow-templates/fe/fe-main.yml
@@ -5,7 +5,11 @@ on:
       - main
       - master
 
-permissions: write-all
+permissions:
+  contents: write
+  pull-requests: write
+  actions: read
+  checks: write
 
 env:
   NX_BRANCH: ${{ github.event.number }}
