updates target branch for uses for test changes on c-place repo in dummy PR

--- a/.github/workflow-templates/fe/fe-licenses.yml
+++ b/.github/workflow-templates/fe/fe-licenses.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   check-licenses:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@release/26.1
+    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@feature/PFM-TASK-7221-Restrict-GitHub-Actions-Workflow-Permissions
     with:
       FOSS_DIST: dist
       CUSTOM_LICENSES_JSON: custom-licenses/custom-licenses.json
