Revert "updates target branch for uses for test changes on c-place repo in dummy PR"
This reverts commit a11c750e9cd1b72c4e5aa8a9dc82536a592b3a08.

--- a/.github/workflow-templates/fe/fe-tag-pushed.yml
+++ b/.github/workflow-templates/fe/fe-tag-pushed.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   release-version:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-release.yml@feature/PFM-TASK-7221-Restrict-GitHub-Actions-Workflow-Permissions
+    uses: collaborationFactory/github-actions/.github/workflows/fe-release.yml@release/26.1
     secrets:
       JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
