--- a/.github/workflow-templates/fe/fe-check-upmerge.yml
+++ b/.github/workflow-templates/fe/fe-check-upmerge.yml
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   check-upmerge:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-check-upmerge.yml@feature/PFM-TASK-7221-Restrict-GitHub-Actions-Workflow-Permissions
+    uses: collaborationFactory/github-actions/.github/workflows/fe-check-upmerge.yml@release/26.1
     secrets:
       SLACK_TOKEN_UPMERGE: ${{ secrets.SLACK_TOKEN_UPMERGE }}
       GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
