--- a/.github/workflow-templates/fe/fe-release.yml
+++ b/.github/workflow-templates/fe/fe-release.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   install-deps:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@feature/PFM-TASK-7221-Restrict-GitHub-Actions-Workflow-Permissions
+    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@release/26.1
     with:
       GHA_REF: ''
     secrets:
@@ -24,7 +24,7 @@ jobs:
 
   e2e-tests:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@feature/PFM-TASK-7221-Restrict-GitHub-Actions-Workflow-Permissions
+    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@release/26.1
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
@@ -33,14 +33,14 @@ jobs:
 
   build:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@feature/PFM-TASK-7221-Restrict-GitHub-Actions-Workflow-Permissions
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@release/26.1
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
 
   tag:
     needs: [build, e2e-tests]
-    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@feature/PFM-TASK-7221-Restrict-GitHub-Actions-Workflow-Permissions
+    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@release/26.1
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
