--- a/.github/workflows/fe-snapshot.yml
+++ b/.github/workflows/fe-snapshot.yml
@@ -41,7 +41,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Build and Push to Jfrog NPM Registry
-        uses: collaborationFactory/github-actions/.github/actions/artifacts@release/25.4
+        uses: collaborationFactory/github-actions/.github/actions/artifacts@fix/PFM-ISSUE-32629-Fix-max-old-space-size-in-25-4
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
