--- a/.github/workflow-templates/fe/fe-check-upmerge.yml
+++ b/.github/workflow-templates/fe/fe-check-upmerge.yml
@@ -8,7 +8,7 @@ permissions: write-all
 
 jobs:
   check-upmerge:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-check-upmerge.yml@release/25.4
+    uses: collaborationFactory/github-actions/.github/workflows/fe-check-upmerge.yml@fix/PFM-ISSUE-32629-Fix-max-old-space-size-in-25-4
     secrets:
       SLACK_TOKEN_UPMERGE: ${{ secrets.SLACK_TOKEN_UPMERGE }}
       GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
