--- a/.github/workflows/fe-build.yml
+++ b/.github/workflows/fe-build.yml
@@ -44,7 +44,7 @@ jobs:
         run: git fetch origin ${{ inputs.GHA_BASE }}:${{ inputs.GHA_BASE }} || true
 
       - name: Build and Storybook
-        uses: collaborationFactory/github-actions/.github/actions/run-many@release/25.4
+        uses: collaborationFactory/github-actions/.github/actions/run-many@fix/PFM-ISSUE-32629-Fix-max-old-space-size-in-25-4
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
