--- a/.github/workflow-templates/fe/fe-release.yml
+++ b/.github/workflow-templates/fe/fe-release.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   install-deps:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@fix/PFM-ISSUE-32629-Fix-max-old-space-size-in-25-4
+    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@release/25.4
     with:
       GHA_REF: ''
     secrets:
@@ -20,7 +20,7 @@ jobs:
 
   e2e-tests:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@fix/PFM-ISSUE-32629-Fix-max-old-space-size-in-25-4
+    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@release/25.4
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
@@ -29,14 +29,14 @@ jobs:
 
   build:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@fix/PFM-ISSUE-32629-Fix-max-old-space-size-in-25-4
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@release/25.4
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
 
   tag:
     needs: [build, e2e-tests]
-    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@fix/PFM-ISSUE-32629-Fix-max-old-space-size-in-25-4
+    uses: collaborationFactory/github-actions/.github/workflows/fe-tag.yml@release/25.4
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
