--- a/.github/workflow-templates/fe/fe-licenses.yml
+++ b/.github/workflow-templates/fe/fe-licenses.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   check-licenses:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@release/25.2
+    uses: collaborationFactory/github-actions/.github/workflows/fe-licenses.yml@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
     with:
       FOSS_DIST: dist
       CUSTOM_LICENSES_JSON: custom-licenses/custom-licenses.json
