--- a/.github/workflow-templates/fe/fe-main.yml
+++ b/.github/workflow-templates/fe/fe-main.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
   install-deps:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@release/25.2
+    uses: collaborationFactory/github-actions/.github/workflows/fe-install-deps.yml@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
     with:
       GHA_REF: ''
     secrets:
@@ -26,7 +26,7 @@ jobs:
   # This job is only needed in case you are using Percy
   e2e-tests:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@release/25.2
+    uses: collaborationFactory/github-actions/.github/workflows/fe-e2e.yml@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
@@ -35,14 +35,14 @@ jobs:
 
   build:
     needs: install-deps
-    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@release/25.2
+    uses: collaborationFactory/github-actions/.github/workflows/fe-build.yml@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
 
   snapshot:
     needs: build
-    uses: collaborationFactory/github-actions/.github/workflows/fe-snapshot.yml@release/25.2
+    uses: collaborationFactory/github-actions/.github/workflows/fe-snapshot.yml@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
     with:
       GHA_REF: ''
       GHA_BASE: ${{ github.event.before }}
