--- a/.github/workflow-templates/fe/fe-tag-pushed.yml
+++ b/.github/workflow-templates/fe/fe-tag-pushed.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   release-version:
-    uses: collaborationFactory/github-actions/.github/workflows/fe-release.yml@release/25.2
+    uses: collaborationFactory/github-actions/.github/workflows/fe-release.yml@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
     secrets:
       JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
       JFROG_URL: ${{ secrets.JFROG_URL }}
