--- a/.github/workflows/fe-build.yml
+++ b/.github/workflows/fe-build.yml
@@ -41,7 +41,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Build and Storybook
-        uses: collaborationFactory/github-actions/.github/actions/run-many@release/25.2
+        uses: collaborationFactory/github-actions/.github/actions/run-many@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
