--- a/.github/workflows/fe-cleanup-snapshots.yml
+++ b/.github/workflows/fe-cleanup-snapshots.yml
@@ -39,7 +39,7 @@ jobs:
           dot-npmrc: ${{ secrets.DOT_NPMRC }}
 
       - name: Cleanup Snapshot Artifacts
-        uses: collaborationFactory/github-actions/.github/actions/snapshots@release/25.2
+        uses: collaborationFactory/github-actions/.github/actions/snapshots@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
