--- a/.github/workflows/fe-code-quality.yml
+++ b/.github/workflows/fe-code-quality.yml
@@ -60,7 +60,7 @@ jobs:
 
       - name: Unit Tests
         id: test
-        uses: collaborationFactory/github-actions/.github/actions/run-many@release/25.2
+        uses: collaborationFactory/github-actions/.github/actions/run-many@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
         continue-on-error: true
         with:
           target: ${{ matrix.target }}
