--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -43,7 +43,7 @@ jobs:
         run: npx cypress install
 
       - name: Affected Regression Tests
-        uses: collaborationFactory/github-actions/.github/actions/run-many@release/25.2
+        uses: collaborationFactory/github-actions/.github/actions/run-many@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
         with:
           target: ${{ matrix.target }}
           jobIndex: ${{ matrix.jobIndex }}
