--- a/.github/workflows/fe-pr-close.yml
+++ b/.github/workflows/fe-pr-close.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm ci
 
       - name: Delete Snapshots from NPM Registry
-        uses: collaborationFactory/github-actions/.github/actions/artifacts@release/25.2
+        uses: collaborationFactory/github-actions/.github/actions/artifacts@feature/PFM-TASK-7338-Backport-Sonar-Scan-in-github-actions
         env:
           JFROG_BASE64_TOKEN: ${{ secrets.JFROG_BASE64_TOKEN }}
           JFROG_URL: ${{ secrets.JFROG_URL }}
