Set heap size for e2e

--- a/.github/workflows/fe-e2e.yml
+++ b/.github/workflows/fe-e2e.yml
@@ -60,6 +60,7 @@ jobs:
           PERCY_PARTIAL_BUILD: 1
           DEV_STORIES: true
           CYPRESS_INTERNAL_BROWSER_CONNECT_TIMEOUT: 300000
+          NODE_OPTIONS: --max-old-space-size=4096
 
       - name: Upload E2E Videos
         uses: actions/upload-artifact@v4
